--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 body {
     height: 100vh;
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 aside {
@@ -60,15 +61,21 @@ main {
 }
 
 .top {
-    width: 100%;
     height: 37%;
+    padding: 13% 21% 3rem 3rem;
+}
+
+h2 {
+    font-size: 1.3rem;
+    margin: 1rem 0;
 }
 
 .middle {
     height: 28%;
     background-color: #fff;
-    padding: 15px;
+    padding-left: 3rem;
 }
 
 .bottom {
+    padding-left: 3rem;
 }
