Style bottom section of main

--- a/style.css
+++ b/style.css
@@ -45,14 +45,15 @@ aside {
 }
 
 .img-credit {
-    color: #fff;
+    color: #ccc;
     text-align: center;
     margin-bottom: 20px;
+    font-size: 0.8rem;
 }
 
 a,
 a:visited {
-    color: #fff;
+    color: #ccc;
 }
 
 main {
@@ -61,7 +62,7 @@ main {
 }
 
 .top {
-    height: 37%;
+    height: 35%;
     padding: 13% 21% 3rem 3rem;
 }
 
@@ -74,8 +75,29 @@ h2 {
     height: 28%;
     background-color: #fff;
     padding-left: 3rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .bottom {
     padding-left: 3rem;
+}
+
+button {
+    background-color: #596d48;
+    color: white;
+    font-weight: bold;
+    padding: 0.5rem 3rem;
+    margin: 2rem 0;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px rgba(200, 200, 200, 0.3);
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.login, .login:visited {
+    color :#596d48;
+    font-weight: bold;
+    text-decoration: none;
 }
