--- a/style.css
+++ b/style.css
@@ -58,11 +58,11 @@ a:visited {
 
 main {
     flex: 5;
-    background-color: #fafafa;
+    background-color: #eee;
 }
 
 .top {
-    height: 35%;
+    height: 37%;
     padding: 13% 21% 3rem 3rem;
 }
 
@@ -73,8 +73,38 @@ h2 {
 
 .middle {
     background-color: #fff;
-    padding-left: 3rem;
+    padding: 1rem 3rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.contact-info {
+    width: 60%;
+    padding: 0.5rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 1rem;
+}
+
+label {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 0.7rem;
+    font-weight: bold;
+    color: #888;
+}
+
+input {
+    display: block;
+    width: 200px;
+    margin-bottom: 1rem;
+    border: 1px solid #e5e7eb;
+    padding: 0.2rem 0.5rem;
+    font-size: 0.9rem;
+}
+
+input:focus {
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
 }
 
 .bottom {
@@ -85,10 +115,11 @@ button {
     background-color: #596d48;
     color: white;
     font-weight: bold;
-    padding: 0.5rem 3rem;
+    padding: 0.6rem 2rem;
     margin: 2rem 0;
+    border: none;
     border-radius: 5px;
-    box-shadow: 1px 1px 2px rgba(200, 200, 200, 0.3);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 button:hover {
