--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 body {
     height: 100vh;
     display: flex;
+    flex-wrap: wrap;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -81,19 +82,19 @@ main {
 h1 {
     font-style: italic;
     font-family: "Comforter Brush";
-    font-size: 2.8rem;
+    font-size: clamp(1.8rem, 3vw, 2.5rem);
     color: #630000;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 2.5vw, 2rem);
     margin: 0.5rem 0;
     font-family: "Comforter Brush";
     color: #601e1d;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: clamp(1.2rem, 2.5vw, 1.5rem);
     font-family: "Comforter Brush";
     color: #805050;
 }
