--- a/style.css
+++ b/style.css
@@ -71,30 +71,32 @@ a:visited {
 main {
     flex: 5;
     background-color: #eeebdd;
+    padding-top: 2rem;
     position: relative;
 }
 
-.top {
-    height: 40%;
-    padding: 5% 15% 3rem 3rem;
+.top, .middle, .bottom {
+    --contentWidth: 700px;
+    --blockPadding: 1rem;
+    padding: var(--blockPadding) clamp(1rem, 5vw,  50% - var(--contentWidth)/2 )
 }
 
 h1 {
     font-style: italic;
     font-family: "Comforter Brush";
-    font-size: clamp(1.8rem, 3vw, 2.5rem);
+    font-size: clamp(2rem, 3vw, 2.5rem);
     color: #630000;
 }
 
 h2 {
-    font-size: clamp(1.5rem, 2.5vw, 2rem);
+    font-size: clamp(1.5rem, 2vw, 2rem);
     margin: 0.5rem 0;
     font-family: "Comforter Brush";
     color: #601e1d;
 }
 
 h3 {
-    font-size: clamp(1.2rem, 2.5vw, 1.5rem);
+    font-size: clamp(1.3rem, 1.8vw, 1.5rem);
     font-family: "Comforter Brush";
     color: #805050;
 }
@@ -105,8 +107,8 @@ h3 {
 
 .middle {
     background-color: #d8b6a4;
-    padding: 1rem 3rem 0 3rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    padding-bottom: 0;
 }
 
 .contact-info {
@@ -158,10 +160,6 @@ input:focus {
     color: red;
     font-size: 0.8rem;
     margin-top: -0.7rem;
-}
-
-.bottom {
-    padding-left: 3rem;
 }
 
 button {
