--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     height: 100vh;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -35,10 +35,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo img {
-    width: clamp(100px, 40%, 250px);
+    width: clamp(125px, 40%, 250px);
 }
 
 .img-credit {
