--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 }
 
 body {
+    width: min(1440px, 100vw);
     height: 100vh;
+    margin: auto;
+    background: #666;
     display: flex;
     /* flex-wrap: wrap; */
     font-family: Arial, Helvetica, sans-serif;
@@ -30,7 +33,7 @@ body {
     font-family: "Comforter Brush", sans-serif;
     font-weight: bolder;
     color: #c0281b;
-    font-size: clamp(2rem, 5vw, 5rem);
+    font-size: clamp(2rem, 5%, 5rem);
 
     display: flex;
     justify-content: center;
@@ -66,12 +69,15 @@ main {
     background-color: #eeebdd;
     padding-top: 2rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .top, .middle, .bottom {
     --contentWidth: 700px;
     --blockPadding: 1rem;
-    padding: var(--blockPadding) clamp(1rem, 5vw,  50% - var(--contentWidth)/2 )
+    padding: var(--blockPadding) clamp(1rem, 5%,  50% - var(--contentWidth)/2 )
 }
 
 h1 {
