--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     margin: auto;
     background: #666;
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -33,7 +33,7 @@ body {
     font-family: "Comforter Brush", sans-serif;
     font-weight: bolder;
     color: #c0281b;
-    font-size: clamp(2rem, 5%, 5rem);
+    font-size: clamp(2rem, 5vw, 5rem);
 
     display: flex;
     justify-content: center;
