--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@
     box-sizing: border-box;
 }
 
-body {
-    width: min(1440px, 100vw);
-    height: 100vh;
-    margin: auto;
+body{
+    position: relative;
     background: #666;
+}
+
+.content-container {
+    min-height: 100vh;
+    width: min(1440px, 100vw);
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative;
+    padding-bottom: 1rem;
 }
 
 .sidebar {
@@ -27,7 +31,6 @@ body {
 
 .logo {
     position: absolute;
-    display: block;
     width: 100%;
     top: 15%;
     background: rgba(255, 0, 0, 0.2);
@@ -47,7 +50,6 @@ body {
 }
 
 .img-credit {
-    display: block;
     width: 100%;
     position: absolute;
     bottom: 1rem;
@@ -185,9 +187,9 @@ button:hover {
 
 footer {
     position: absolute;
-    bottom: 5px;
-    display: block;
+    bottom: 0px;
     width: 100%;
     text-align: center;
     font-size: 0.8rem;
+    height: 1rem;
 }
