--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ a:visited {
 
 main {
     flex: 5;
-    background-color: #eeebdd;
+    /* background-color: #eeebdd; */
+    background-color: #c0b0b0;
     padding-top: 2rem;
     position: relative;
     display: flex;
@@ -111,6 +112,8 @@ h3 {
     background-color: #d8b6a4;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     padding-bottom: 0;
+    background-image: url("images/uruk-hai.jpg");
+    background-size: cover;
 }
 
 .contact-info {
@@ -126,14 +129,15 @@ label {
     letter-spacing: 1px;
     font-size: 0.7rem;
     font-weight: bold;
-    color: #888;
+    color: #c0c0c0;
+    text-shadow: 1px 1px 2px black;
 }
 
 input {
     display: block;
     width: 200px;
     margin-bottom: 1rem;
-    border: 50px solid #e5e7eb;
+    border: 1px solid;
     padding: 0.2rem 0.5rem;
     font-size: 0.9rem;
     border-width: 1px;
@@ -152,10 +156,11 @@ input:focus {
 }
 
 .pwd-rules {
-    color: #630000;
+    color: #c0c0c0;
     font-size: 0.8rem;
     margin-top: -0.7rem;
     width: 200px;
+    text-shadow: 1px 1px 2px black;
 }
 
 .error-msg {
@@ -165,7 +170,7 @@ input:focus {
 }
 
 button {
-    background-color: #630000;
+    background-color: #502020;
     color: white;
     font-weight: bold;
     padding: 0.6rem 2rem;
