--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ h3 {
   column-gap: 1rem;
 }
 
+.required::after {
+  content: "*";
+}
+
 label {
   text-transform: uppercase;
   letter-spacing: 1px;
